--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
       biết được mình sẽ nhận được nhân vật nào khi mở hộp. Ngoài ra, mỗi bộ còn
       có các mô hình phiên bản hiếm, khiến dân sưu tầm phát cuồng
     </p>
+    <!-- Thẻ tạo liên kết - Link -->
+    <a href="https://kenh14.vn/">Di chuyển đến kênh 14</a>
   </body>
 </html>
