add link download

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
       có các mô hình phiên bản hiếm, khiến dân sưu tầm phát cuồng
     </p>
     <!-- Thẻ tạo liên kết - Link -->
-    <a href="https://kenh14.vn/">Di chuyển đến kênh 14</a>
+    <a
+      href="https://kenh14.vn/"
+      title="Kênh 14"
+      target="_blank"
+      rel="noreferrer noopener"
+      >Di chuyển đến kênh 14</a
+    >
+    <a href="./assets/babythree1.jpg" download="beba.png"
+      >Tải hình babythree cute</a
+    >
   </body>
 </html>
