--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
     <a href="./assets/babythree1.jpg" download="beba.png"
       >Tải hình babythree cute</a
     >
+    <!-- Thẻ hình ảnh -->
+    <img
+      src="./assets/babythree1.webp"
+      alt="Hình bé ba"
+      height="300px"
+      width="300px"
+    />
   </body>
 </html>
