--- a/index.html
+++ b/index.html
@@ -37,5 +37,15 @@
       height="300px"
       width="300px"
     />
+    <video
+      src="./assets/video.mp4"
+      type="video/mp4"
+      controls
+      height="300px"
+    ></video>
+    <video poster="./assets/video_cover.png" controls>
+      <source src="./assets/video.webm" type="video/webm" />
+      <source src="./assets/video.mp4" type="video/mp4" />
+    </video>
   </body>
 </html>
