--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
       <source src="./assets/video.webm" type="video/webm" />
       <source src="./assets/video.mp4" type="video/mp4" />
     </video>
+    <!-- Thẻ audio -->
+     <audio controls>
+      <source src="./assets/audio.mp3" type="audio/mpeg" />
+      <source src="./assets/audio.ogg" type="audio/ogg" />
   </body>
 </html>
